removing features flag code

--- a/AzureAdventCalendarWeb/Views/Home/Index.cshtml
+++ b/AzureAdventCalendarWeb/Views/Home/Index.cshtml
@@ -49,11 +49,7 @@
     </thead>
     <tbody class="bg-white">
         <tr>
-            <th scope="row">December 1st 
-                <feature name="CalendarEntryDecember">
-                    <a href="~/Content/AzureAdventCalendarDecember1st.ics"><img src="~/images/calendar.png" /></a>
-                </feature>
-            </th>
+            <th scope="row">December 1st</th>
             <td><a href="https://twitter.com/Jack_Ref" target="_blank">Jack Tracey</a></td>
             <td>&nbsp;</td>
             <td>Azure Governance</td>
@@ -65,11 +61,7 @@
             <td>The Azure Advent Poem</td>
         </tr>
         <tr>
-            <th scope="row">December 2nd
-                <feature name="CalendarEntryDecember">
-                    <a href="~/Content/AzureAdventCalendarDecember2nd.ics"><img src="~/images/calendar.png" /></a>
-                </feature>
-            </th>
+            <th scope="row">December 2nd</th>
             <td><a href="https://twitter.com/wmatthyssen" target="_blank">Wim Matthyssen</a></td>
             <td>&nbsp;</td>
             <td>Azure Service Health</td>
