--- a/AzureAdventCalendarWeb/Views/Home/Index.cshtml
+++ b/AzureAdventCalendarWeb/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
         <img src="~/images/xmastree.png" />
         <div class="aac-header__middle">
             <h1>Welcome</h1>
-            <p class="lead">Azure Advent Calendar 2019</p>
+            <p class="lead">Azure Advent Calendar 2019-2020</p>
         </div>
         <img src="~/images/xmastree.png" />
         <img src="~/images/xmas bit.png" />
